--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ amethyst = { git = "https://github.com/amethyst/amethyst", branch = "develop", f
 amethyst-extra = { path = "../amethyst-extra" }
 log = "0.4.3"
 rand = "0.5.4"
+termion = "1.5.1"
