--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
 
 [dependencies]
-amethyst = { git = "https://github.com/amethyst/amethyst", branch = "develop", features = ["nightly","profiler"] }
-#amethyst-extra = { git = "https://github.com/jojolepro/amethyst-extra" }
-amethyst-extra = { path = "../amethyst-extra" }
+amethyst = { version = "0.8", features = ["nightly","profiler"] }
+amethyst-extra = { git = "https://github.com/jojolepro/amethyst-extra" }
+#amethyst-extra = { git = "../amethyst-extra" }
 log = "0.4.3"
 rand = "0.5.4"
 #termion = "1.5.1"
